frontend - fix: seccion de cuentas demo ya no hace overflow cuando aparece FetchStatusText de loading

--- a/frontend/src/components/estructura/Main/Authentication/Ingresar/Lista_Cuentas_Demo/Lista_Cuentas_Demo.module.css
+++ b/frontend/src/components/estructura/Main/Authentication/Ingresar/Lista_Cuentas_Demo/Lista_Cuentas_Demo.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     width: calc(50vw - 10px);
+    max-height: fit-content;
     
     text-align: center;
     
